--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,5 +18,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/item_schedule"
         />
+    <Button
+        android:id="@+id/btnNetwork"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/recyclerView"
+        app:layout_constraintStart_toStartOf="@id/recyclerView"
+        android:text="Network"/>
+    <Button
+        android:id="@+id/btnBD"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/btnNetwork"
+        app:layout_constraintTop_toBottomOf="@id/recyclerView"
+        android:text="BD"/>
 
 </android.support.constraint.ConstraintLayout>
